[tool.poetry]
name = "all-weather"
version = "0.1.0"
description = ""
authors = ["orshemtov <orshemtovq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.40"
pydantic = "^2.8.2"
cachetools = "^5.3.3"


[tool.poetry.group.dev.dependencies]
types-cachetools = "^5.3.0.7"
ruff = "^0.5.1"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
